# tfmake

./: .gitignore  README.md  pyproject.toml
tests/: Makefile  test_maeke.py  test_tfmake.py
tfmake/: Makefile  Makefile.aws  Makefile.azure  __init__.py  cli.py
tfmake/custom/: __init__.py
tfmake/templates/: tfmake.azure.j2
tfmake/terraform/: __init__.py
