[tool.poetry]
name = "tfmake"
version = "1.0.3"
description = "Python based Makefile wrapper for terraform projects"
authors = ["Pascal Prins <pascal.prins@foobar-it.com>"]
include = ["pyproject.toml"]

readme = "README.md"

homepage = "https://github.com/paprins/tfmake"
repository = "https://github.com/paprins/tfmake"

[tool.poetry.dependencies]
python = "^2.7 || ^3.7"
click = "^7.0"
toml = "^0.10.0"
pathlib = "^1.0.1"
Jinja2 = "^2.11.1"
PyYAML = "^3.13" # wanted to install ^5.3.1, but azure-cli-core would not let me :(
azure-common = "^1.1.25"
msrest = "^0.6.13"
msrestazure = "^0.6.3"
azure-core = "^1.4.0"
outdated = "^0.2.0"
azure-cli-core = "2.0.49" # this is actually the latest version i can install :(

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
tfmake = "tfmake.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

