[tool.poetry]
name = "tfmake"
version = "1.0.17"
description = "Python based Makefile wrapper for terraform projects"
authors = ["Pascal Prins <pascal.prins@foobar-it.com>"]
include = ["pyproject.toml"]

readme = "README.md"

homepage = "https://github.com/paprins/tfmake"
repository = "https://github.com/paprins/tfmake"

[tool.poetry.dependencies]
python = "^2.7 || ^3.7"
click = "^7.0"
toml = "^0.10.0"
pathlib = "^1.0.1"
Jinja2 = "^2.11.1"
PyYAML = "^5.3.1"
outdated = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
tfmake = "tfmake.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

